2011-02-04 Nicolas
* add children_reference related column

2010-11-08 Kazuhiko
* support cataloging multiple subjects.
* subject related tables are moved from erp5_ingestion_mysql_innodb_catalog.

2010-11-05 Kazuhiko
* remove 'z_related_security' method and 'allowedRolesAndUsers' related key, that are not used because of the conflict with existing 'allowedRolesAndUsers' column.

2010-09-28 yusei
* Add grand_grand_grand_grand_parent_specialise_portal_type and grand_grand_grand_grand_parent_specialise_reference.

2010-08-20 tatuya
* Add grand_parent_delivery_portal_type, and grand_grand_grand_parent_delivery_portal_type related keys so that we will select the delivery portal type of a simulation movement.

2010-06-08 Kazuhiko
* Add portal_type column in translation table and use it in several related keys to avoid unexpected verbose results of translated state search.

2010-06-08 yusei
* Add predicate category related keys.
* Update predicate category indexing method to support "no-left-join" version of predicate search.
* Use erp5_core revision 1601 or higher.

2010-05-24 tatuya
* Add parent_specialise_reference related key to select simulation movements by the applied rule reference.

2010-03-15 yusei
* Add grand_grand_grand_grand_grand_parent related key.

2010-03-03 yusuke
* Remove unused script.

2010-03-02 yusei
* Remove short title.

2010-03-02 Nicolas Dumazet
* Catalog transformations

2010-02-05 aurel
* add more columns into versioning table in order to use frequency_index

2010-01-07 Kazuhiko
* increase the size of the language column in the versioning table from 2 to 5.

2009-11-20 Yusuke
* Relation bug is fixed.

2009-04-18 Kazuhiko
* Version 5.4.1

2009-04-16 Kazuhiko
* Use versioning table only for documents having getVersion.

2009-04-15 Kazuhiko
* Add effective_date and expiration_date in versioning table.

2009-04-01 vincentd
* Move here versioning table from erp5_dms_mysql_innodb_catalog.

2008/11/13 yusei
* Start to develop version 5.4.
