@@ -2,4 +2,5 @@
  <key>advanced_search_text | SQLCatalog_makeQuickSearchQuery</key>
  <key>full_text | SQLCatalog_makeFullTextQuery</key>
  <key>quick_search_text | SQLCatalog_makeQuickSearchQuery</key>
+ <key>search_text | SQLCatalog_makeSearchTextQuery</key>
 </key_list>
