@@ -1,3 +1,4 @@
 quick_search_text | SQLCatalog_makeQuickSearchQuery
 advanced_search_text | SQLCatalog_makeQuickSearchQuery
 full_text | SQLCatalog_makeFullTextQuery
+search_text | SQLCatalog_makeSearchTextQuery
